--- a/.github/chatmodes/style.css
+++ b/.github/chatmodes/style.css
@@ -1,9 +1,11 @@
 #grid-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     width: 80vmin;
     height: 80vmin;
-    border: 0.3rem solid black
+    border: 0.3rem solid black;
+    margin: auto; 
 }
 
 .grid-square {
@@ -13,4 +15,7 @@
     box-sizing: border-box
 }
 
-
+body{
+    display: flex;
+    justify-content: center;
+}
